positioned more button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img src="media/emoji_poster.png" alt="Emoji Movie Poster">
             <button class="material-symbols-outlined">play_circle</button>
         </header>
+        <div class="buttons">
+            <button title="More" class="material-symbols-outlined more">expand_circle_down</button>
+        </div>
         <!-- <footer>
             <div class="stats">
                 <span class="likes">96% Match</span>
@@ -26,7 +29,6 @@
                 <span>Cult Status</span>
                 <span>Funny</span>
             </div>
-            <button title="More" class="material-symbols-outlined more">expand_circle_down</button>
         </footer> -->
     </article>
 </body>
