added more buttons and made hover movement look better

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <article class="card">
         <header>
             <img src="media/emoji_poster.png" alt="Emoji Movie Poster">
-            <button class="material-symbols-outlined">play_circle</button>
+            <button title="Play" class="material-symbols-outlined">play_circle</button>
         </header>
         <div class="buttons">
-            <button title="More" class="material-symbols-outlined more">expand_circle_down</button>
+            <button title="Seen" class="material-symbols-outlined">check_circle</button>
+            <button title="Watch" class="material-symbols-outlined">add_circle</button>
+            <button title="Like" class="material-symbols-outlined">recommend</button>
+            <button title="More" class="material-symbols-outlined more" id="more">expand_circle_down</button>
         </div>
         <!-- <footer>
             <div class="stats">
