added stats and tags and changed hover transition

--- a/index.html
+++ b/index.html
@@ -14,25 +14,23 @@
             <img src="media/emoji_poster.png" alt="Emoji Movie Poster">
             <button title="Play" class="material-symbols-outlined">play_circle</button>
         </header>
-        <div class="buttons">
-            <button title="Seen" class="material-symbols-outlined">check_circle</button>
-            <button title="Watch" class="material-symbols-outlined">add_circle</button>
-            <button title="Like" class="material-symbols-outlined">recommend</button>
-            <button title="More" class="material-symbols-outlined more" id="more">expand_circle_down</button>
-        </div>
-        <!-- <footer>
+        <footer>
+            <div class="buttons">
+                <button title="Watch" class="material-symbols-outlined">add_circle</button>
+                <button title="Like" class="material-symbols-outlined">recommend</button>
+                <button title="More" class="material-symbols-outlined more" id="more">expand_circle_down</button>
+            </div>
             <div class="stats">
-                <span class="likes">96% Match</span>
+                <span class="likes">82% Match</span>
+                <span class="runtime">1h 26m</span>
                 <span class="rating">TV&ndash;14</span>
-                <span class="seasons">5 seasons</span>
-                <span class="quality">HD</span>
             </div>
             <div class="tags">
-                <span>Nostalgic</span>
-                <span>Cult Status</span>
+                <span>Family</span>
+                <span>Animated</span>
                 <span>Funny</span>
             </div>
-        </footer> -->
+        </footer>
     </article>
 </body>
 </html>
