change footer to use flex for alignment

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
                 <button title="Like" class="material-symbols-outlined">recommend</button>
                 <button title="More" class="material-symbols-outlined more" id="more">expand_circle_down</button>
             </div>
-            <div class="stats">
-                <span class="likes">82% Match</span>
-                <span class="runtime">1h 26m</span>
-                <span class="rating">TV&ndash;14</span>
-            </div>
-            <div class="tags">
-                <span>Family</span>
-                <span>Animated</span>
-                <span>Funny</span>
+            <div class="info">
+                <div class="stats">
+                    <span class="likes">82% Match</span>
+                    <span class="runtime">1h 26m</span>
+                    <span class="rating">TV&ndash;14</span>
+                </div>
+                <div class="tags">
+                    <span>Family</span>
+                    <span>Animated</span>
+                    <span>Funny</span>
+                </div>
             </div>
         </footer>
     </article>
